@@ -305,6 +305,7 @@ fix get_next_episodes
 fix playlist issue
 fix missing bitrates
 fix special charecters issue in device name
+fix database reset when login was denied
 
 
 6.0.13 (beta)
